--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <svg width="960" height="500"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <head></head>
@@ -7,3 +9,4 @@
     <button onclick="incrementGraph()">Generate</button>
 <script src="out.js"></script>
 </body>
+</html>
